# PaintArenaOnline

./: .gitignore  Credits.txt  LICENSE  README.md
Game/: BuildServer.bat  CMakeLists.txt  ConfigClient.bat  ConfigServer.bat  CreateMetadata.bat  Credits.txt  bc.bat  cc.bat  cs.bat
Game/Client/Include/: Assets.hpp  ClNetworking.hpp  ClPrefabs.hpp  ClientTypes.hpp  Console.hpp  Core.hpp  Network.hpp  UIComponents.hpp
Game/Client/Include/Systems/: AudioSystems.hpp  ClInputSystems.hpp  ClientInputSystems.hpp  RendererSystems.hpp  ShakeEffectSystems.hpp  SmudgeEffectSystems.hpp  UISystems.hpp
Game/Client/Source/: Assets.cpp  ClNetworking.cpp  ClPrefabs.cpp  Client.cpp  Console.cpp  Net.cpp  Network.cpp  Networking.cpp
Game/Client/Source/Systems/: AudioSystems.cpp  ClInputSystems.cpp  ClientInputSystems.cpp  RendererSystems.cpp  ShakeEffectSystems.cpp  SmudgeEffectSystems.cpp  UISystems.cpp
Game/Client/include/: Net.h
Game/Client/src/: Client.cpp  Main.cpp  Net.cpp
Game/Metadata/: MetadataClient.rc  MetadataServer.rc
Game/Server/Include/: SvNetworking.hpp  SvPrefabs.hpp  Timing.hpp
Game/Server/Include/Systems/: HealthSystems.hpp  ServerInputSystems.hpp  SvNetworkSystems.hpp
Game/Server/Source/: Server.cpp  SvNetworking.cpp  SvPrefabs.cpp  Timing.cpp
Game/Server/Source/Systems/: HealthSystems.cpp  ServerInputSystems.cpp  SvInputSystems.cpp  SvNetworkSystems.cpp
Game/Server/src/: Main.cpp  Server.cpp
Game/Shared/: BulletSystem.hpp  Components.hpp  Math.cpp  Math.hpp  NetworkTypes.hpp
Game/Shared/Include/: Components.hpp  Math.hpp
Game/Shared/Include/Systems/: BoundsSystems.hpp  BulletSystems.hpp  MovementSystems.hpp
Game/Shared/Source/: Math.cpp
Game/Shared/Source/Systems/: BoundsSystems.cpp  BulletSystems.cpp  MovementSystems.cpp
